added a title to the add tags confirm dialog and fixed the scrolling and button positions. see #183

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -826,5 +826,9 @@
   "addtags_excl_list_infoline2": {
     "message": "Add a word per line, or separated by a comma.",
     "description": ""
+  },
+  "addtags_dialog_title": {
+    "message": "Add tags to the email",
+    "description": ""
   }
 }
