adding and removing tags from the exclusion list. see #183

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -830,5 +830,9 @@
   "addtags_dialog_title": {
     "message": "Add tags to the email",
     "description": ""
+  },
+  "addtags_exclude_tag": {
+    "message": "Exclude tag",
+    "description": ""
   }
 }
