--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -872,7 +872,7 @@
     "description": ""
   },
   "prefs_SurveyLinkText2": {
-    "message": "Click here, it take only one minute!",
+    "message": "Click here, it only takes a minute!",
     "description": ""
   }
 }
