--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -874,5 +874,13 @@
   "prefs_SurveyLinkText2": {
     "message": "Click here, it only takes a minute!",
     "description": ""
+  },
+  "prefs_OpenAIComp_ForceModel": {
+    "message": "Manually insert model",
+    "description": ""
+  },
+  "OpenAIComp_force_model_ask": {
+    "message": "Insert here the model name you want to use.",
+    "description": ""
   }
 }
