add tags list tags info added. fixes #215

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -894,5 +894,9 @@
   "prompt_add_tags_force_lang": {
     "message": "The tags must be written in",
     "description": ""
+  },
+  "prefs_OptionText_btnManagePrompts_infoline3": {
+    "message": "You can use the {%tags_full_list%} data placeholder in the prompt to list the available tags. With an appropriate prompt, you could then force the tags to be chosen only from the list of those already existing.",
+    "description": ""
   }
 }
