--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -938,5 +938,13 @@
   "GoogleGemini_SystemInstruction_Info": {
     "message": "When you set a system instruction, you give the model additional context to understand the task, provide more customized responses, and adhere to specific guidelines over the prompt that will be sent.",
     "description": ""
+  },
+  "ChatGPT_Developer_Messages": {
+    "message": "Developer Messages",
+    "description": ""
+  },
+  "ChatGPT_Developer_Messages_Info": {
+    "message": "When you set the developer messages, you give the model additional context to understand the task, provide more customized responses, and adhere to specific guidelines over the prompt that will be sent.",
+    "description": ""
   }
 }
