en locale updated

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -972,7 +972,7 @@
     "description": ""
   },
   "prefs_OptionText_btnManageCalendarEventInfo": {
-    "message": "Manage calendar event settings",
+    "message": "Manage calendar events settings",
     "description": ""
   }
 }
