--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -974,5 +974,21 @@
   "prefs_OptionText_btnManageCalendarEventInfo": {
     "message": "Manage calendar events settings",
     "description": ""
+  },
+  "GetCalendarEvent_PageTitle": {
+    "message": "Manage Calendar Events Settings",
+    "description": ""
+  },
+  "GetCalendarEvent_info_default": {
+    "message": "In this page you can modify the default prompt used to get a calendar event from selected text.",
+    "description": ""
+  },
+  "GetCalendarEvent_prompt_text_title": {
+    "message": "Current prompt text",
+    "description": ""
+  },
+  "prefs_OptionText_GetCalendarEvent_infoline2": {
+    "message": "You can change the prompt as you wish, but the response received from the AI must be in JSON format as specified in the default prompt!",
+    "description": ""
   }
 }
